# python-project-49

./: .Makefile.swp  .gitignore  Makefile  README.md  README.md.save  brain_calc.demo.cast  brain_even.demo.cast  brain_gcd.demo.cast  brain_prime.demo.cast  brain_progression.demo.cast  demo.cast  new_demo.cast  poetry  pyproject.toml  pyvenv.cfg  setup.cfg  setup.cfg.save
.github/: build.gradle.kts  workflow
.poetry.venv/: pyvenv.cfg
brain_games/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_gcd.py  brain_progression.py  cli.py  demo.cast  engine.py  makefile  makefile.save  new_demo.cast  newone_demo.cost  pyproject.toml
brain_games/games/: brain_calc.py  brain_even.py  brain_even.pyn  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  gcd.py.save  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py  pyproject.toml
