[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Create brain games"
authors = ["Milena Egiaze  <milena.egiazaryan77@mail.ru>"]
packages = [
{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
